# salon-gpt

./: .env-template  .gitignore  CODEOWNERS  Makefile  docker-compose.yml  notepad.txt  package-lock.json  package.json  pyproject.toml  salongpt.org
docker_scripts/: env-defaults
src/backend/: Dockerfile  main.py
src/backend/alembic/versions/: 2024_08_01_9891196e479a_add_deployment_model_tables.py  2024_10_28_11bb482f1553_added_studies_database.py  2024_11_06_4e3eaec553bf_removed_user_id_from_study_added_status.py  2024_11_13_d7e348a91fe4_.py  2024_11_14_f47933d2a797_removed_community.py  2024_11_17_2a798d35b3e9_.py  2024_11_17_bfb08a34922a_initial.py  2024_12_09_1740614c04bc_init.py  2024_12_10_cb209a09bd55_init.py  2024_12_11_1b366c4aa01f_init.py  2024_12_11_af1b1ef43c77_seed_studies.py  2024_12_12_23e25008ba7a_init.py  2024_12_12_3cc2e22f0b6b_seed_studies_and_interviews.py
src/backend/chat/custom/: custom.py
src/backend/cli/: constants.py  main.py  prompts.py
src/backend/config/: auth.py  configuration.template.yaml  deployments.py  routers.py  settings.py  tools.py
src/backend/crud/: agent.py  conversation.py  document.py  interview.py  message.py  study.py
src/backend/database_models/: __init__.py  agent.py  base.py  citation.py  conversation.py  database.py  deployment.py  interview.py  message.py  snapshot.py  study.py  user.py
src/backend/model_deployments/: __init__.py  faster_whisper_platform.py  ollama_platform.py  prompts.py  tgi.py  utils.py
src/backend/routers/: auth.py  chat.py  conversation.py  scim.py  snapshot.py  study.py  user.py
src/backend/schemas/: __init__.py  agent.py  chat.py  citation.py  cohere_chat.py  context.py  conversation.py  deployment.py  interview.py  message.py  snapshot.py  study.py  study_chat.py
src/backend/services/: cache.py  chat.py  context.py  conversation.py  file.py  request_validators.py  snapshot.py  study.py  utils.py
src/backend/tools/: __init__.py  files.py  lang_chain.py
src/community/config/: deployments.py
src/community/model_deployments/: local_model.py
src/interfaces/assistants_web/: .env.development  .env.production  components.json  openapi-ts.config.ts  package-lock.json  package.json  tailwind.config.js
(+154 files in other folders)
